--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  dio: ^5.3.2
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   shared_preferences: ^2.0.10
-
+  conditional_builder_null_safety: ^0.0.6
+  fluttertoast: ^8.2.2
 
 
 
